--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ body::after {
       Abiya Roy
     </div>
     <div class="landing-divider"></div>
-    <p class="landing-date">11.07.2026 · KUTTAPARAMBA, ALAKODE, KANNUR</p>
+    <p class="landing-date">11.07.2026 </p>
     <button class="open-btn" onclick="openInvitation()">Open Invitation</button>
   </div>
 
@@ -590,3 +590,4 @@ function toggleMusic(){
 </script>
 </body>
 </html>
+
